kustomize/istio-demo-ingress/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "httpbin.example.com"
  - 192.168.93.12.nip.io
  gateways:
  - httpbin-gateway
  http:
  - match:
    - uri:
        prefix: /status
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8000
        host: httpbin
